--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 version: '3.3'
 
 services:
-  flask-app:
-    container_name: flask-app
+  fastapi-app:
+    container_name: fastapi-app
     image: ${IMAGE}
     build:
       context: .
       dockerfile: Dockerfile
     ports:
       - ${EXPOSED_PORT}:5002
-    command: bash -c "gunicorn --capture-output --enable-stdio-inheritance -w 1 --threads 4 -b 0.0.0.0:5002 app:app --timeout 1000 --log-config /home/flask-template/configs/gunicorn.conf"
+    command: bash -c "gunicorn --capture-output --enable-stdio-inheritance -w 1 --threads 4 -b 0.0.0.0:5002 app:app --timeout 1000 --log-config /home/fastapi-template/configs/gunicorn.conf"
     networks:
       - shared_network
     restart: always
