--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,10 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - ${EXPOSED_PORT}:5002
-    command: bash -c "gunicorn --capture-output --enable-stdio-inheritance -w 1 --threads 4 -b 0.0.0.0:5002 app:app --timeout 1000 --log-config /home/fastapi-template/configs/gunicorn.conf"
+      - ${EXPOSED_PORT}:8081
+    environment:
+      - PYTHONUNBUFFERED=1
+    command: sh -c "uvicorn app:app --host 0.0.0.0 --port 8081 --workers 1 --timeout-keep-alive 1000"
     networks:
       - shared_network
     restart: always
